Fix heading spacing

--- a/site/web/app/themes/buzzeasy/assets/sass/utils/_prototype.scss
+++ b/site/web/app/themes/buzzeasy/assets/sass/utils/_prototype.scss
@@ -31,6 +31,9 @@
     height: 45px;
     width: 45px;
     padding: 4px;
+    @include mq($from: medium){
+        padding: 0;
+    }
 }
 
 .service-icon {
